# Rust_work

./: README.md  builder-pattern.md  charla_stanford.md  numbers.txt  piola.md  resumen-libro-zero2hero.md  resumen_el_lenguaje_de_programacion_Rust.org  resumen_libro_machine_learning.md  resumen_programming_rust.md  resumen_programming_rust.org  resumen_programming_rust_cap19.md  resumen_programming_rust_cap20.md  resumen_programming_rust_cap20_new.md  resumen_programming_rust_cap21.md  resumen_programming_rust_cap7.md  resumen_programming_rust_nuevo_cap20-async.md
Cosas-que-se-vienen/inline-const/: Cargo.toml
Iterator-range-impl/: Cargo.toml
Iterator-range-impl/src/: main.rs
Zero2Hero/database-integration/: Cargo.toml
Zero2Hero/hello-world-actix/: Cargo.toml
Zero2Hero/parsing-from-post-request/: Cargo.toml
Zero2Hero/zero2prod/: Cargo.toml
async-chat-book/: Cargo.toml
async-chat-book/src/: lib.rs  utils.rs
binary-tree-complete/: Cargo.toml
binary-tree-complete/src/: main.rs
binary_tree/: Cargo.toml
binary_tree/src/: main.rs
blue_pill_test/: Cargo.toml
blue_pill_test/.cargo/: config
blue_pill_test/src/: main.rs
book_programs/: Cargo.toml
book_programs/src/: main.rs
cells_random/: Cargo.toml
cells_random/src/: main.rs
chars_test/: Cargo.toml
chars_test/src/: main.rs
complex-numbers/: Cargo.toml
complex-numbers/src/: main.rs
conversiones-strings/: Cargo.toml
conversiones-strings/src/: main.rs
copy-generics-buffers/: Cargo.toml
copy-generics-buffers/src/: main.rs
cow-in-action/: Cargo.toml
cow-in-action/src/: main.rs
ejemplo_flatten/: Cargo.toml
ejemplo_flatten/src/: main.rs
false-color/: Cargo.toml
false-color/src/: main.rs
files-one-place-to-other/: Cargo.toml
files-one-place-to-other/src/: main.rs
find-extrema/: Cargo.toml
find-extrema/src/: main.rs
fizz-buzz/: Cargo.toml
fizz-buzz/src/: main.rs
funciones-y-codigo-utiles/: Cargo.toml
funciones-y-codigo-utiles/src/: main.rs
get-index-of-slice/: Cargo.toml
grep-alternative/: Cargo.toml
grep-complete/: Cargo.toml
http-client/: Cargo.toml
huffman/: Cargo.toml
impl-trait-many-structs/: Cargo.toml
iterate_ranges_chars/: Cargo.toml
json-macro/: Cargo.toml
mandelbrot-set/: Cargo.toml
ndarray_test/: Cargo.toml
newtype-blog-code/: Cargo.toml
paralel-iterator/: Cargo.toml
parse_pairs/: Cargo.toml
parser-combinators/: Cargo.toml  notas.md
peekeable-example/: Cargo.toml
reading-from-stdin/: Cargo.toml
sdl-images/: Cargo.toml
slice-patterns-subslices/: Cargo.toml
take-while-in-action-baby/: Cargo.toml
word_funnel/: Cargo.toml
(+30 files in other folders)
