[package]
name = "async-chat-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.10.0", features = ["unstable"]}
tokio = {version = "1.13.0", features = ["sync"]}
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde_json = "1.0.69"
