[package]
name = "blue_pill_test"
version = "0.1.0"
authors = ["suizo <mnoblia@disroot.org>"]

[dependencies]
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal" }
cortex-m = "0.5.2"
nb = "0.1.1"
stm32f103xx = "0.10.0"
cortex-m-rt = "0.5.1"
panic-semihosting = "0.3.0"
panic-itm = "0.2.0"

[features]
doc = []
rt = ["stm32f103xx/rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
